--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>rms</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	<name>rms</name>
+	<name>meniuto-portal</name>
 	<description>RM</description>
 	<properties>
 		<java.version>11</java.version>
