--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.data.mongodb.uri= mongodb://admin:admin123456@cluster0-shard-00-00.fvww2.mongodb.net:27017,cluster0-shard-00-01.fvww2.mongodb.net:27017,cluster0-shard-00-02.fvww2.mongodb.net:27017/meniuto-development?ssl=true&replicaSet=atlas-wyymeu-shard-0&authSource=admin&retryWrites=true&w=majority
+
+mongock.change-logs-scan-package=com.restaurant.management.changelogs
